--- a/web/templates/courses/_problem_set.html
+++ b/web/templates/courses/_problem_set.html
@@ -49,18 +49,37 @@
 	             </div>
 	             <div class="btn-group" role="group" aria-label="Toggle Visibility">
 					 <a class="btn btn-default" href="{% url 'problem_set_toggle_visible' problem_set.pk %}" role="button" aria-label="Show/Hide"
-					    title="Sklop je {% if problem_set.visible %}viden{% else %}skrit{% endif %}">
+					 	{% if problem_set.visible %}
+					 		{# Translators: Sklop je viden#}
+					 		title = "{% trans 'Problem set is visible' %}"
+				 		{% else %}
+				 			{# Translators: Sklop je skrit#}
+					 		title = "{% trans 'Problem set is hidden' %}"
+				 		{% endif %}
+					    >
+					    
 					   <span style="align-content:flex-end" class="glyphicon glyphicon-eye-{% if problem_set.visible %}open{% else %}close{% endif %}" aria-hidden="true"></span>
 					 </a>
 				 </div>
 				 <div class="btn-group" role="group" aria-label="Toggle Solution Visibility">
 				 		<a class="btn btn-default" href="{% url 'problem_set_toggle_solution_visibility' problem_set.pk %}" role="button" aria-label="Set Solution Visibility"
-						   title="Rešitve so {% if problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN %}skrite
-								  {% elif problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}pogojno vidne
-								  {% else %}vidne{% endif %}">
-					        {% if problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN %}<span class="glyphicon glyphicon-ban-circle"></span>{% endif %}
-					        {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}<span class="glyphicon glyphicon-remove-circle"></span>{% endif %}
-					        {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE %}<span class="glyphicon glyphicon-ok-circle"></span>{% endif %}
+						  	{% if problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN %}
+							  	{# Translators: Uradne rešitve so skrite #}
+							  	title = "{% trans 'Official solutions are hidden' %}"	
+						  	{% elif problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}
+						  		{# Translators: Uradne rešitve so pogojno vidne #}
+							  	title = "{% trans 'Official solutions are visible when solved' %}"
+						  	{% else %}
+						  		{# Translators: Uradne rešitve so vidne #}
+							  	title = "{% trans 'Official solutions are visible' %}"
+						  	{% endif %}>
+					        {% if problem_set.solution_visibility == problem_set.SOLUTION_HIDDEN %}
+					        	<span class="glyphicon glyphicon-ban-circle"></span>{% endif %}
+					        {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE_WHEN_SOLVED %}
+					        	<span class="glyphicon glyphicon-remove-circle"></span>{% endif %}
+					        {% if problem_set.solution_visibility == problem_set.SOLUTION_VISIBLE %}
+					        	<span class="glyphicon glyphicon-ok-circle"></span>
+				        	{% endif %}
 					    </a>
 				 </div>
 			 </span>
