Add progress overview for problem sets

--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -37,6 +37,13 @@
 	                 {# Translators: Button for creating new problem. #}
 					 {% trans "Add new problem" %}
 	        </button>
+		    <div class="btn-group" role="group" aria-label="Progress">
+	        <a class="btn btn-default btn-large" href="{% url 'problem_set_progress' problem_set.pk %}" role="button">
+	            <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
+        	{# Translators: Button for showing the overall progress of students for the problem set. #}
+            {% trans "Show progress" %}
+ 	        </a>
+		    </div>
 	        {% else %}
 		    <div class="btn-group" role="group" aria-label="Download">
 	        <a class="btn btn-primary btn-large" href="{% url 'problem_set_attempts' problem_set.pk %}" role="button">
