--- a/web/templates/courses/problem_set_progress.html
+++ b/web/templates/courses/problem_set_progress.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
-{% load i18n %}	              
-{% load staticfiles %}
+{% load i18n %}
 
 {% block title %}Tomo – {{ problem_set.title }}{% endblock %}
 
@@ -15,47 +14,37 @@
 {% block content %}
   {% for problem in problems %}
   <h3>
-    Naloga {{ forloop.counter }}
-    {% if problem.title %} &mdash; {{ problem.title }}{% endif %}
+    {{ problem.title }}
   </h3>
 
-  <table class="table table-striped table-bordered table-condensed">
-    <thead>
-      <tr>
-        <th>Ime in priimek</th>
-        {% for part in problem.parts.all %}
-        <th>{{ forloop.counter }}. {% trans "part" %}</th>
-        {% endfor %}
-      </tr>
-    </thead>
-
+  <table class="table table-condensed">
+    {% with progress_bar_width=problem.progress_bar_width %}
     <tbody>
       {% for user, attempts in problem.attempts_by_user %}
 
       <tr>
-        <td>{{ user.get_full_name }}</td>
-        {% for attempt in attempts %}
-          <td>
-            {% if attempt %}
-				{% if attempt.valid %}
-				  <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true" style="color: #468847"></span>
-				{% else %}
-				  <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true" style="color: #A31919"></span>
-				{% endif %}
-            {% else %}
-              &nbsp;
-            {% endif %}
-          </td>
-      {% endfor %}
+        <td>{{ user.get_full_name }}</td><td width='75%'>
+        <div class="progress">
+          {% for attempt in attempts %}
+            <div style="width: {{ progress_bar_width }}; {% if not attempt %} background-color: #f5f5f5{% endif %}" class="progress-bar
+              {% cycle '' 'progress-bar-striped' %}
+              {% if attempt %}
+                {% if attempt.valid %}
+                  progress-bar-success
+                {% else %}
+                  progress-bar-danger
+                {% endif %}
+              {% else %}
+              {% endif %}
+            ">
+            </div>
+          {% endfor %}
+        </div>
+        </td>
       </tr>
       {% endfor %}
     </tbody>
+    {% endwith %}
   </table>
   {% endfor %}
 {% endblock %} {# content #}
-
-{% block extra_js %}
-<!-- for Tree view and modals-->
-<script src="{% static "js/bootstrap-treeview.js" %}"></script>
-<script src="{% static "js/js_functions.js" %}"></script>
-{% endblock %}
