--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -10,9 +10,23 @@
 {% block content %}
 <div class="panel panel-default">
         <div class="panel-heading">
-            <h4>
-                {{ course.title }}
-            </h4>
+        	<div class="row">
+			    <div class="col-md-6">
+		            <h4>
+		                {{ course.title }}
+		            </h4>
+	            </div>
+	            <div class="col-md-6">
+	            	<span class="pull-right">
+		            	{% if show_teacher_forms %}
+		            		<a class="btn btn-primary btn-large" href="{% url 'course_users' course.pk %}" role="button">
+		            			{# Translators: Link to list of course users. #}
+			            		{% trans "Browse list of users" %}
+			            	</a>
+		            	{% endif %}
+	            	</span>
+	            </div>
+	         </div>
         </div>
         
         {% if show_teacher_forms %}
