--- a/web/templates/courses/course_users.html
+++ b/web/templates/courses/course_users.html
@@ -53,7 +53,9 @@
 	    <li class="list-group-item">
 	    	<div class="row">
 			    <div class="col-md-6">
-		            {{student.first_name}} {{student.last_name}}
+			    	<a href="{% url 'course_progress' course.pk  student.pk%}">
+		            	{{student.first_name}} {{student.last_name}}
+	            	</a>
 	            </div>
 	            <div class="col-md-6">
 	            	<span class="pull-right">
