Move logos to the current server

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -90,17 +90,17 @@
         <div class="row">
           <div class="col-md-4">
           {# Translators: Univerza v Ljubljani #}
-            <img src="http://tyrion.fmf.uni-lj.si/ul.png" class="center-block" alt="{% trans 'University of Ljubljana' %}" 
+            <img src="{% static "img/ul.png" %}" class="center-block" alt="{% trans 'University of Ljubljana' %}" 
             	 title="{% trans 'University of Ljubljana' %}" style="max-width: 100%; max-height: 6em">
           </div>
           <div class="col-md-4">
           {# Translators: Evropski sklad za regionalni razvoj #}
-            <img src="http://tyrion.fmf.uni-lj.si/ess.png" class="center-block" alt="{% trans 'European Regional Development Fund' %}" 
+            <img src="{% static "img/ess.png" %}" class="center-block" alt="{% trans 'European Regional Development Fund' %}" 
             	 title="{% trans 'European Regional Development Fund' %}" style="max-width: 100%; max-height: 6em">
           </div>
           <div class="col-md-4">
           {# Translators: Ministrstvo za izobraževanje, znanost in šport #}
-            <img src="http://tyrion.fmf.uni-lj.si/mizs.png" class="center-block" alt="{% trans 'Ministry of Education, Science and Sport' %}" 
+            <img src="{% static "img/mizs.png" %}" class="center-block" alt="{% trans 'Ministry of Education, Science and Sport' %}" 
             	 title="{% trans 'Ministry of Education, Science and Sport' %}" style="max-width: 100%; max-height: 6em">
           </div>
         </div>
