Add enroll/browse users buttons on both pages and translations update

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -106,10 +106,9 @@
         </div>
         <p>
         {# Translators: Text in footer. #}
-        {% blocktrans %}
-        This work was funded in part by the European Union, European Regional Development Fund and the Ministry of Education, 
+        {% blocktrans %}This work was funded in part by the European Union, European Regional Development Fund and the Ministry of Education, 
         Science and Sport. The operation is implemented in the framework of the Operational Program for Strengthening Regional Development 
-        Potentials for the Period 2007 – 2013, Development priority: Economic development infrastructure, Priority theme: Information society.
+        Potentials for the Period 2007&mdash;2013, Development priority: Economic development infrastructure, Priority theme: Information society.
         {% endblocktrans %}
            
         </p>
