--- a/web/templates/courses/course_detail.html
+++ b/web/templates/courses/course_detail.html
@@ -4,7 +4,9 @@
 {% block title %}Tomo – {{ course.title }}{% endblock %}
 
 {% block navigation-left %} 
-    <li class="active"><a href="{% url 'course_detail' course.pk %}">{{ course.title }} <span class="sr-only">(current)</span></a></li>
+    <li class="active"><a href="{% url 'course_detail' course.pk %}">{{ course.title }} 
+    <span class="sr-only">{# Translators: current page in navigation #}
+    		{% trans "(current)" %}</span></a></li>
 {% endblock %}
 
 {% block content %}
@@ -18,12 +20,18 @@
 	            </div>
 	            <div class="col-md-6">
 	            	<span class="pull-right">
-		            	{% if show_teacher_forms %}
-		            		<a class="btn btn-primary btn-large" href="{% url 'course_users' course.pk %}" role="button">
+		            	<form action="{% url 'unenroll_from_course' course.pk %}"  method="post" id='unenroll_from_course_form'>
+			            	{% csrf_token %}
+				            <button class="btn btn-default" type="submit" aria-label="Unenroll">
+								{% trans "Unenroll" %}
+							</button>
+							{% if show_teacher_forms %}
+							<a class="btn btn-primary" href="{% url 'course_users' course.pk %}" role="button">
 		            			{# Translators: Link to list of course users. #}
-			            		{% trans "Browse list of users" %}
-			            	</a>
-		            	{% endif %}
+			            		{% trans "Browse list of users" %}	
+		            		</a>
+		            		{% endif %}
+						</form>
 	            	</span>
 	            </div>
 	         </div>
