--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -11,10 +11,12 @@
     <title>{% block title %}{% trans "Project Tomo" %}{% endblock %}</title>
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css" rel="stylesheet">    	
-    <style type="text/css"> body { padding-top: 70px; }</style>  <!-- so fixed navigation bar will not overlay other content-->
+    <link href="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.css" rel="stylesheet">      
+    <link href="{% static 'css/tomo.css' %}" rel="stylesheet">
   </head>
   <body>
+    <script src="{% static 'js/tomo.js' %}"></script>
+
   
   	{% if user.is_authenticated %}
  	{% endif %}
@@ -67,23 +69,9 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>    
-    <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({
-        tex2jax: {
-          inlineMath: [["$", "$"], ["\\(", "\\)"]]
-        }
-      });
-    </script>
     <script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.min.js"></script>
-    <script>
-      $(document).ready(function() {
-        $("code").each(function() {
-            $(this).addClass("prettyprint")
-        });
-        prettyPrint();
-      });
-    </script>
+    <script src="{% static 'js/tomo.js' %}"></script>
     {% block extra_js %}{% endblock %}
     <footer>
 	    <div class="container">
@@ -106,11 +94,9 @@
         </div>
         <p>
         {# Translators: Text in footer. #}
-        {% blocktrans %}This work was funded in part by the European Union, European Regional Development Fund and the Ministry of Education, 
-        Science and Sport. The operation is implemented in the framework of the Operational Program for Strengthening Regional Development 
-        Potentials for the Period 2007&mdash;2013, Development priority: Economic development infrastructure, Priority theme: Information society.
+        {% blocktrans %}
+        This work was funded in part by the European Union, European Regional Development Fund and the Ministry of Education, Science and Sport. The operation is implemented in the framework of the Operational Program for Strengthening Regional Development Potentials for the Period 2007 – 2013, Development priority: Economic development infrastructure, Priority theme: Information society.
         {% endblocktrans %}
-           
         </p>
       </div>
     </footer>
