--- a/web/templates/courses/problem_set_progress.html
+++ b/web/templates/courses/problem_set_progress.html
@@ -9,7 +9,7 @@
     <li><a href="{% url 'problem_set_detail' problem_set.pk %}">{{ problem_set.title }}</a></li>
     <li class="active"><a href="{% url 'problem_set_progress' problem_set.pk %}">
     	{# Translators: Progress of students in a problem set - heading in navigation #}
-    	{% trans "progress" %}
+    	{% trans "Progress" %}
     	<span class="sr-only">
     		{# Translators: current page in navigation #}
     		{% trans "(current)" %}
@@ -21,7 +21,7 @@
 {% block content %}
   {% for problem in problems %}
   <h3>
-    {{ problem.title }}
+    <a href="{{ problem.get_absolute_url }}">{{ problem.title }}</a>
   </h3>
 
   <table class="table table-condensed">
@@ -31,22 +31,25 @@
 
       <tr>
         <td>
-        	<a href="{% url 'course_progress' problem_set.pk %}">{{ user.get_full_name }}</a>
+        	<a href="{% url 'course_progress' problem_set.course.pk user.pk %}">{{ user.get_full_name }}</a>
        	</td><td width='75%'>
         <div class="progress">
           {% for attempt in attempts %}
-            <div style="width: {{ progress_bar_width }}; {% if not attempt %} background-color: #f5f5f5{% endif %}" class="progress-bar
-              {% cycle '' 'progress-bar-striped' %}
-              {% if attempt %}
-                {% if attempt.valid %}
-                  progress-bar-success
-                {% else %}
-                  progress-bar-danger
-                {% endif %}
-              {% else %}
-              {% endif %}
-            ">
-            </div>
+          {# FIX IT! IT SHOWS SOLUTION FROM USER THAT IS BROWSING THE PAGE. NEW SOLUTIONS VIEW NEEDED #}
+          	<a href="{% url 'problem_solution' problem.pk %}">
+	            <div style="width: {{ progress_bar_width }}; {% if not attempt %} background-color: #f5f5f5{% endif %}" class="progress-bar
+	              {% cycle '' 'progress-bar-striped' %}
+	              {% if attempt %}
+	                {% if attempt.valid %}
+	                  progress-bar-success
+	                {% else %}
+	                  progress-bar-danger
+	                {% endif %}
+	              {% else %}
+	              {% endif %}
+	            ">
+	            </div>
+            </a>
           {% endfor %}
         </div>
         </td>
