--- a/web/templates/courses/_problem_set.html
+++ b/web/templates/courses/_problem_set.html
@@ -6,9 +6,13 @@
     <div class="media-left">
       <div style='width: 80px; height: 60px; line-height: 60px; font-size: 20px;'>
         {% with percentage=problem_set.percentage %}
+        {% if percentage == None %}
+        <p class="text-center percentage">/</p>
+        {% else %}
         <p class="text-center percentage text-{% if percentage < 50 %}danger{% elif percentage < 90 %}warning{% else %}success{% endif %}">
         	{{ percentage }}<small>%</small>
         </p>
+        {% endif %}
         {% endwith %}
       </div>
     </div>
