A matching icon for progress bars

--- a/web/templates/courses/problem_set_detail.html
+++ b/web/templates/courses/problem_set_detail.html
@@ -39,7 +39,7 @@
 	        </button>
 		    <div class="btn-group" role="group" aria-label="Progress">
 	        <a class="btn btn-default btn-large" href="{% url 'problem_set_progress' problem_set.pk %}" role="button">
-	            <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
+	            <span class="glyphicon glyphicon-tasks" aria-hidden="true"></span>
         	{# Translators: Button for showing the overall progress of students for the problem set. #}
             {% trans "Show progress" %}
  	        </a>
